--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.5",
+    "portal-vue": "^2.1.7",
     "vue-infinite-loading": "^2.4.5"
   },
   "devDependencies": {
