--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-module": "^2.0.0",
+    "@nuxtjs/router": "^1.5.0",
     "@nuxtjs/tailwindcss": "^3.0.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.8.1",
